# DIPProcessor

./: .gitignore  CMakeLists.txt  README.md  bmp.h  image_process.cpp  image_process.h  main.cpp
src/common/: bmp.h
src/common/convolution_mask/: average_filtering_convolution.h  convolution_mask.h  median_filtering_convolution.h
src/common/edge_detection_operator/: edge_detection_operator.h  log_operator.h  prewitt_operator.h  sobel_operator.h
src/common/transformational_matrix/: coordinate.h  mirror_matrix.h  rotate_matrix.h  scaling_matrix.h  transformational_matrix.h  translation_matrix.h
src/contour_extraction/: CMakeLists.txt  contour_extraction.cpp  contour_extraction.h
src/edge_detection/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  log_detection.h  prewitt_detection.h  sobel_detection.h
src/hough_transform/: CMakeLists.txt  hough_transform.cpp  hough_transform.h
src/image_histogram/: CMakeLists.txt  image_histogram.cpp  image_histogram.h
src/image_process/: CMakeLists.txt  image_process.cpp  image_process.h
src/image_transformation/: CMakeLists.txt  image_transformation.cpp  image_transformation.h  mirror_transformation.h  rotate_transformation.h  scaling_transformation.h  translation_transformation.h
src/region_segmentation/: CMakeLists.txt  region_growing.cpp  region_growing.h  region_spliting.cpp  region_spliting.h
src/spatial_domain_filtering/: CMakeLists.txt  average_filtering.h  median_filtering.h  spatial_domain_filtering.cpp  spatial_domain_filtering.h
src/threshold_segmentation/: CMakeLists.txt  image_segmentation.cpp  image_segmentation.h  iterative_threshold.h  ostu.h  threshold_t.h
src/zone_marker/: CMakeLists.txt  zone_marker.cpp  zone_marker.h
